--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 		<main>
 			<div class="mobile-section">
 				<h1 lang="de">[ri´zist]<br>CONCEPTUAL MEDIA INSTALLATION</h1>
+				<h3 lang="de" class="subheader">Bereits abgeschlossene Ausstellungen:</h3>
+				<h3 lang="en" class="subheader">Concluded exhibitions:</h3>
 				<p lang="de">
 					<a href="https://goo.gl/maps/wLHXpWTeJ27XBixH9" target="_blank">Freiräume</a><br>
 					Bürgerspitalplatz 2<br>
